Fixed overlap on wrapped buttons

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ h1 {
   margin-top: 20px;
   flex-wrap: wrap;
   flex-basis: 0 1 21%;
+  row-gap: 10px;
 }
 
 .control button {
